Fixed navbar z-index, cleaned up project

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,7 @@ app-nav-menu {
   box-shadow: gray 0 0 10px;
   top: 0;
   width: 100%;
+  z-index: 1000;
 }
 
 main {
